# rdlnet

./: .gitattributes  .gitignore  requirements-export.txt  requirements.txt  run_distill.sh  run_rdlnet.sh  train_distill.py  train_rdlnet.py
cpp/: CMakeLists.txt  README.md  rdlnet_tflite_infer.cc
dataset/RWMD_dataset/: data_preprocessing_rwdm_1.py
notebooks/: RDLNet_Colab_minimal.ipynb  avoid_colab_disconnect.js  colab_snippet.txt
rdlnet/: __init__.py  backbone.py  device.py  distill.py  hungarian.py  losses.py  model.py  ms_deform_attn.py  sam_backbone.py  viz_rdlnet.py
rdlnet/data/: __init__.py  coco_distill.py  distill_folder.py  doc_json.py  rwmd_distill.py  rwmd_exif_points.py
scripts/: compare_pt_tflite_vis.py  download_rdlnet_datasets.sh  export_rdlnet_tflite.py  run_export_tflite.sh  sample_coco_train_subset.py  visualize_rwmd.py
